# PromR_App

./: .gitignore  CanOnRobot.py  ComPortTest.py  MODBUS_TCP_CLIENT.py  PromRApp.spec  README.md  SLAVESERVER1.mbp  SLIDERTEST1.py  UI_video_streaming.py  cropping_thread_try.py  iiirt.py  modbusconfig.mbp  pyproject.toml  pyvenv.cfg  requirements.txt  video_streaming.py  video_streaming.spec  video_streaming.ui
